@@ -38,6 +38,13 @@
 <p>2018-04-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/rle.c (ReadRLEImage): Check for EOF when reading comment.
+Fixes oss-fuzz 7667 &quot;graphicsmagick/coder_RLE_fuzzer:
+Use-of-uninitialized-value in ReadRLEImage&quot;. (Credit to OSS-Fuzz).</li>
+<li>coders/pdb.c (WritePDBImage): Avoid use of uninitialized
+bytes. Fixes oss-fuzz 7638 &quot;graphicsmagick/coder_PDB_fuzzer:
+Use-of-uninitialized-value in WritePDBImage&quot;. (Credit to
+OSS-Fuzz).</li>
 <li>coders/rla.c (ReadRLAImage): Add many more validations,
 including scanline offsets and number of channels.  Fixes oss-fuzz
 7653 &quot;graphicsmagick/coder_RLA_fuzzer: Timeout in
